syntax = "proto3";
package desmos.profiles.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "desmos/profiles/v1beta1/models_app_links.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/desmos-labs/desmos/x/profiles/types";

// QueryUserApplicationLinksRequest represent the request used when querying the
// application links of a specific user
message QueryUserApplicationLinksRequest {
  string user = 1;

  // Pagination defines an optional pagination for the request
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryUserApplicationLinksResponse represents the response to the query used
// to get the application links for a specific user
message QueryUserApplicationLinksResponse {
  repeated ApplicationLink links = 1 [ (gogoproto.nullable) = false ];

  // Pagination defines the pagination response
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
